	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...
	- Fixed #786: Bug - Httpd Server impl. - apache_php_fpm. - No input file specified
	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication
	- Fixed #793: Bug - Autoinstaller/Setup - Admin user is getting new id in database
	- Fixed #808: Enhancement - Possibility to Upload i-MSCP Plugins via GUI
	- Fixed #816: Bug - Unable to uninstall i-MSCP
	- Fixed #819: Tasks - Clean up PHP Settings
	- Fixed #831: Bug - imscp_daemon: send_line(): socket write error

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.3
------------------------------------------------------------------------------------------------------------------------

2013-06-08: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc2.3

ENGINE:
	- Fixed: Error on backup: Unable to change mode for...

GUI:
	- Fixed: Unable to add hosting plan (reseller level)
	- Fixed: Possible missing properties (hosting_plans)

SETUP:
	- Fixed: Pressed feature is broken

Tickets:
	- Fixed #647: Bug - Setup - Unable to reconfigure IP addresses
	- Fixed #776: Bug - Hosting plans attribs aren't updated with the migration
	- Fixed #777: Bug - Autoinstaller - Two entries for imscp-autoinstall option -h
	- Fixed #778: Bug - Autoinstaller - Exit code 5 in non-interactive mode --nopromt
	- Fixed #781: Bug - Network card not found
	- Fixed #812: Review - i-MSCP should show true system memory values

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.2
------------------------------------------------------------------------------------------------------------------------

2013-06-04: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc2.2

GUI:
	- Fixed: Custom DNS feature not working due to missing files

VENDOR:
	- Updated jQuery to v1.10.1
	- Updated jQuery UI to v1.10.3

Tickets: