@@ -34,9 +34,11 @@ Tickets:
 	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication
 	- Fixed #793: Bug - Autoinstaller/Setup - Admin user is getting new id in database
 	- Fixed #808: Enhancement - Possibility to Upload i-MSCP Plugins via GUI
+	- Fixed #809: Bug - Autoinstaller - Preseed feature - Error while executing query: Duplicate entry 'admin'
 	- Fixed #816: Bug - Unable to uninstall i-MSCP
 	- Fixed #819: Tasks - Clean up PHP Settings
 	- Fixed #831: Bug - imscp_daemon: send_line(): socket write error
+	- Fixed #841: Bug - Autoinstaller - Preseed feature - some errors
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.0-rc2.3
